kubernetes/sdh-veselice-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: sdh-veselice
  namespace: sdh-veselice
spec:
  selector:
    matchLabels:
      app: sdh-veselice
  replicas: 1
  template: # create pods using pod definition in this template
    metadata:
      labels:
        app: sdh-veselice
    spec:
      containers:
      - name: sdh-veselice
        image:  kozaktomas/sdhveselice:master
        ports:
        - containerPort: 80
